--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.falcon</groupId>
     <artifactId>falcon-site</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.3-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>Apache Falcon</name>
     <description>Apache Falcon is a data management platform for Hadoop.</description>
-    <url>http://incubator.apache.org/knox</url>
+    <url>http://falcon.incubator.apache.org</url>
 
     <properties>
         <skipTests>true</skipTests>
@@ -57,6 +57,7 @@
     <inceptionYear>2013</inceptionYear>
 
     <mailingLists>
+        <!--
         <mailingList>
             <name>falcon-user</name>
             <subscribe>user-subscribe@falcon.apache.org</subscribe>
@@ -64,6 +65,7 @@
             <post>user@falcon.apache.org</post>
             <archive>http://mail-archives.apache.org/mod_mbox/falcon-user/</archive>
         </mailingList>
+        -->
         <mailingList>
             <name>falcon-dev</name>
             <subscribe>dev-subscribe@falcon.apache.org</subscribe>
@@ -249,6 +251,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
                 <configuration>
                     <webResources>
                         <resource>
